{
    "version": 1,
    "name": "PlayerAction",
    "maps": [
        {
            "name": "FoxAction",
            "id": "499b5ab9-706a-45f5-9c5a-991ee6d4e508",
            "actions": [
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "39b01f55-ad3a-481a-b3ff-5be1fc0bb937",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "e41c36a3-7469-4a06-90aa-0f376205c8fd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "0326db29-5c62-41fc-bc3a-f42933fcfe1b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "a6bb414a-bed2-4344-890d-67ea21f8c2cb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f5d32cf9-38b8-4016-ab10-5a895c1cfcd6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8920dd76-bf97-4fa1-b02c-653be1c72ce2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fe12e15-e904-4105-bacd-7b6ebfd29058",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "602457bb-0697-4176-a1fd-15ba111b81b3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}